appId: ${APPID}
---
- scrollUntilVisible:
    element:
      id: ${COMPONENT}
    direction: DOWN
- tapOn:
    id: ${COMPONENT}
- tapOn:
    text: ${PLACEHOLDER}
- inputText: ${TEXT}
- extendedWaitUntil:
    visible: ${TEXT}
    timeout: 5000
- takeScreenshot: e2e/${PLATFORM}/tempScreenshots/${COMPONENT}
# close the keyboard
- tapOn: ${COMPONENT}
# go back
- tapOn: ${COMPONENT}
