appId: ${APPID}
---
- scrollUntilVisible:
    element:
      id: ${COMPONENT}
    direction: DOWN
- tapOn:
    id: ${COMPONENT}
- scrollUntilVisible:
    element:
      text: ${COMPONENT}
    direction: UP
- extendedWaitUntil:
    visible: ${COMPONENT}
    timeout: 5000
- takeScreenshot: e2e/${PLATFORM}/tempScreenshots/${COMPONENT}
- tapOn: ${COMPONENT}
